--- a/7 Introdução ao React/webpack/package.json
+++ b/7 Introdução ao React/webpack/package.json
@@ -6,11 +6,16 @@
   "scripts": {
     "build": "webpack --mode=production",
     "dev": "webpack --mode=development",
-    "start:dev": "webpack-dev-server"
+    "start:dev": "webpack-dev-server",
+    "lint": "eslint ./src/*.js"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^8.10.0",
+    "eslint-plugin-react": "^7.29.3",
+    "eslint-watch": "^8.0.0",
     "html-loader": "^3.1.0",
     "html-webpack-plugin": "^5.5.0",
     "webpack": "^5.70.0",
